# API

./: pyproject.toml  requirements.txt
01-DataIngestionParsing/: dataingestion.ipynb
01-DataIngestionParsing/data/: Actor.xlsx  SanthoshReddyBora.docx  company.json  data.csv  user_data.jsonl
01-DataIngestionParsing/data/databases/: company.db
01-DataIngestionParsing/sample/text_files/: langchain_loaders.txt  langchain_splitter.txt
02-Embedding/: embedding.ipynb
03-chromadb/: vectorstore.ipynb
03-chromadb/chroma_db/: chroma.sqlite3
03-chromadb/data/: doc1.txt  doc3.txt
Fastapi1/: app.py
